<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/nameMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameMovie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/imageView"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_2x"/>

    <ImageView
        android:id="@+id/movieBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bookmark"
        android:layout_below="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_2x"/>

    <TextView
        android:id="@+id/movieData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieData"
        android:layout_below="@id/nameMovie"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin_2x"/>

    <Button
        android:id="@+id/btnRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieData"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/btnRent" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieData"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:text="@string/btnBuy" />

    <View
        android:id="@+id/lineBg"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        android:layout_below="@id/btnRent"/>

    <LinearLayout
        android:id="@+id/proporcionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineBg"
        android:layout_alignStart="@id/lineBg"
        android:layout_alignEnd="@id/lineBg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/circleRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/rating" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/circleFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_family"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/family" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/circleTomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/tomato"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblTomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tomato" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/circleSimilar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_similar"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblSimilar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/similar" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/lineBg2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        android:layout_below="@id/proporcionButton"/>

    <TextView
        android:id="@+id/lblInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_2x"
        android:text="@string/information"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:layout_below="@id/lineBg2"/>

</RelativeLayout>