<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/nameMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/nameMovie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/movieBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_2x"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/movieData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameMovie"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/movieData"
        app:layout_constraintStart_toStartOf="@+id/nameMovie"
        app:layout_constraintTop_toBottomOf="@+id/nameMovie" />

    <Button
        android:id="@+id/btnRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/btnRent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieData" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/btnBuy"
        app:layout_constraintBottom_toBottomOf="@+id/btnRent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRent" />

    <View
        android:id="@+id/lineBg"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/btnRent"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRent" />


    <View
        android:id="@+id/lineBg2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFamily" />


    <TextView
        android:id="@+id/lblInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/information"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineBg2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circleRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_2x"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toStartOf="@+id/circleFamily"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineBg"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circleFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_family"
        app:layout_constraintBottom_toBottomOf="@+id/circleRating"
        app:layout_constraintEnd_toStartOf="@+id/circleTomato"
        app:layout_constraintStart_toEndOf="@+id/circleRating"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/lblTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/tomato"
        app:layout_constraintEnd_toEndOf="@+id/circleTomato"
        app:layout_constraintStart_toStartOf="@+id/circleTomato"
        app:layout_constraintTop_toBottomOf="@+id/circleTomato" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circleSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_similar"
        app:layout_constraintBottom_toBottomOf="@+id/circleTomato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleTomato"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/family"
        app:layout_constraintEnd_toEndOf="@+id/circleFamily"
        app:layout_constraintStart_toStartOf="@+id/circleFamily"
        app:layout_constraintTop_toBottomOf="@+id/circleFamily" />

    <TextView
        android:id="@+id/lblRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/rating"
        app:layout_constraintEnd_toEndOf="@+id/circleRating"
        app:layout_constraintStart_toStartOf="@+id/circleRating"
        app:layout_constraintTop_toBottomOf="@+id/circleRating" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circleTomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tomato"
        app:layout_constraintBottom_toBottomOf="@+id/circleFamily"
        app:layout_constraintEnd_toStartOf="@+id/circleSimilar"
        app:layout_constraintStart_toEndOf="@+id/circleFamily"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/similar"
        app:layout_constraintEnd_toEndOf="@+id/circleSimilar"
        app:layout_constraintStart_toStartOf="@+id/circleSimilar"
        app:layout_constraintTop_toBottomOf="@+id/circleSimilar" />

</androidx.constraintlayout.widget.ConstraintLayout>