<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- ESTA VISTA CORRESPONDE AL BOTÓN REDONDO
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        app:tint="@color/white" />

     ESTA VISTA CORRESPONDE A UNA LÍNEA HORIZONTAL
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider" />-->

    <ImageView
        android:id="@+id/movieImagen"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_2x"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameMovie"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/movieBookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark" />

        </LinearLayout>

        <TextView
            android:id="@+id/movieData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieData" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_2x"
                android:layout_weight="1"
                android:text="@string/btnRent" />

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_2x"
                android:layout_weight="1"
                android:text="@string/btnBuy" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_2x"
            android:background="@color/gray_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/circleRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/lblRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/rating" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/circleFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_family"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/lblFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/family" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/circleTomato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tomato"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/lblTomato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/tomato" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/circleSimilar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_similar"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/lblSimilar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/similar" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_divider" />

        <TextView
            android:id="@+id/lblInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/information"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

    </LinearLayout>

</LinearLayout>